--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,10 @@
-name: smart_app_update
-description: "A new Flutter package project."
-version: 0.0.1
-homepage:
+description: >
+  A Flutter package to check app updates from the Google Play Store and Apple App Store.
+  Supports force update, soft update, and customizable update dialogs.
+version: 1.0.0
+homepage: https://github.com/akhileshgoswami/smart_app_update
+repository: https://github.com/akhileshgoswami/smart_app_update
+issue_tracker: https://github.com/akhileshgoswami/smart_app_update/issues
 
 environment:
   sdk: ^3.6.0
