Prepare package for pub.dev publish

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,3 +1,4 @@
+name: smart_app_update
 description: >
   A Flutter package to check app updates from the Google Play Store and Apple App Store.
   Supports force update, soft update, and customizable update dialogs.
