--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,11 +1,11 @@
-name: smart_app_update
+name: smart_app_update_flutter
 description: >
   A Flutter package to check app updates from the Google Play Store and Apple App Store.
   Supports force update, soft update, and customizable update dialogs.
 version: 1.0.0
-homepage: https://github.com/akhileshgoswami/smart_app_update
-repository: https://github.com/akhileshgoswami/smart_app_update
-issue_tracker: https://github.com/akhileshgoswami/smart_app_update/issues
+homepage: https://github.com/akhileshgoswami/smart_app_update_flutter
+repository: https://github.com/akhileshgoswami/smart_app_update_flutter
+issue_tracker: https://github.com/akhileshgoswami/smart_app_update_flutter/issues
 
 environment:
   sdk: ^3.6.0
