--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: smart_app_update_flutter
 description: >
   A Flutter package to check app updates from the Google Play Store and Apple App Store.
   Supports force update, soft update, and customizable update dialogs.
-version: 1.0.5
+version: 1.0.5+1
 homepage: https://github.com/akhileshgoswami/smart_app_update_flutter
 repository: https://github.com/akhileshgoswami/smart_app_update_flutter
 issue_tracker: https://github.com/akhileshgoswami/smart_app_update_flutter/issues
