--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,18 +8,18 @@ repository: https://github.com/akhileshgoswami/smart_app_update_flutter
 issue_tracker: https://github.com/akhileshgoswami/smart_app_update_flutter/issues
 
 environment:
-  sdk: ^3.6.0
+  sdk: '>=2.18.2 <4.0.0'
   flutter: ">=1.17.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  http: ^1.2.2
+  http: ^1.5.0
   package_info_plus: ^8.3.1
-  shared_preferences: ^2.0.15
-  url_launcher: ^6.3.0
-  get: ^4.6.6
-  intl: ^0.18.0
+  shared_preferences: ^2.5.3
+  url_launcher: ^6.3.2
+  get: ^4.7.2
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
